--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -41,5 +41,12 @@
     <option>Ejemplo 3</option>
 </select><br />
 Soy un check !!! <input type="checkbox"/>
+Soy un radio <input type="radio" name="mismoradio"/>
+<input type="radio" name="mismoradio" checked/>
+<input type="radio" name="mismoradio" />
+<textarea cols="10" rows="5">Texto muy largo de muchas lineas....</textarea>
+
+
+
 
 
